# SPS-Communication

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SPS Communication.sln  makefile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml
SPS Communication/: AuthElement.h  Authentication.h  ByteArray.h  Command.h  Connector.h  Includes.h  Interpeter.h  JSON.h  Logging.h  Message.h  Parser.h  ProgramParameters.h  Query.h  Request.h  RequestBuffer.h  Response.h  SPS Communication.vcxproj  SPS Communication.vcxproj.filters  SPS.h  SPSIO.h  Sequencer.h  Server.h  ServerInterface.h  StateElement.h  Stockmanager.h  VarSequences.h  Variable.h  VariableSequence.h  data.txt  dataold.txt  debugdata.txt  log.txt  main.cpp  prevauth  utility.h
SPS Communication/rapidjson/internal/: biginteger.h
doc/: example_interpret.txt
docs/: doku.md
examples/: debugdata.txt  debugpair.txt
include/: ByteArray.h  Communicator.h  Connector.h  Includes.h  Interpeter.h  JSON.h  Logging.h  Parser.h  ProgramParameters.h  Query.h  Response.h  SPS.h  SPSIO.h  ServerInterface.h  Stockmanager.h  Variable.h  VariableSequence.h  utility.h
libnodave-0.8.5/: nodavesimple.h
libnodave/Dot.NET/CS/: simpleISO_TCP.cs
linux ARM/: makefile
linux_ARM/: Makefile  SPS_Com
src/: CMakeLists.txt  main.cpp
windows/: SPS Communication.vcxproj  SPS Communication.vcxproj.filters  log.txt
windows x86/: prevauth
windows_x86/: SPS Communication.sln  SPS Communication.vcxproj  SPS Communication.vcxproj.filters
